# web-graph-crawler

./: .gitattributes  .gitignore  README.md  collect_link_styles.py  dorks.example.txt  install.sh  pyproject.toml  queries.example.txt  urls.example.txt  web_graph_crawler.py
deploy/searxng/: README.md  docker-compose.yml  settings.yml.template  setup.sh
web_graph_crawler/: __init__.py  __main__.py  browser.py  browser_search.py  cli.py  commoncrawl.py  config.py  constants.py  filters.py  links.py  output.py  politeness.py  progress.py  proxies.py  search_discovery.py  search_providers.py  style_browser.py  style_cli.py  style_records.py  ui.py
